--- a/index.html
+++ b/index.html
@@ -29,22 +29,23 @@
 		gap: 30px;
 		background: rgba(200, 200, 200, 0.35);
 		backdrop-filter: blur(40px);
-		padding: 20px;
+		padding: 10px;
 		border-radius: 12px;
 		box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+		margin: 15px;
 	}
 	
 	span {
 		color: black;
-		font-size: 30px;
+		font-size: 28px;
 		text-transform: uppercase;
 		font-family: monospace;
 		text-align: center;
-		padding: 0 20px 0 20px;
+		padding: 0 10px 0 10px;
 	}
 	
 	input {
-		width: 130px;
+		width: 120px;
 		height: 35px;
 		border-radius: 10px;
 		border-style: solid;
